# M5Pi-Launcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lv_conf.h  lv_demo_conf.h  lv_drv_conf.h  main.c
launcher/: CMakeLists.txt  launcher.h
launcher/src/: launcher.c  lvgl_nes.c
launcher/src/assets/source/: IAMLIUBO.c
patch/: 0001-Add-pthread_testcancel-function-for-back-to-menu.patch  0001-Modify-for-M5Pi-Launcher.patch  0001-NES-Add-CMakeLists.txt-file.patch  0001-PNG-add-CMakeLists.txt-file.patch  0001-QRCode-add-CMakeLists.txt-file.patch  0001-fix-drv-disp-driver-pointer-data.patch  0001-fs_if-add-CMakeLists.txt-file.patch
